# ldpc-investigation-master-thesis

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  double_soft_symmetric.txt  hard_1bit.txt  ldpc_demo.py  optimal_03skew_hard (1).qc  test.qc  test_ge.npz  testcommand1.cpp  testcommand2.cpp
TestLibrary/: CMakeLists.txt  TestLibrary.h  testfunction.cpp
aff3ct/: .gitignore  CMakeLists.txt  README.md
aff3ct/include/: aff3ct_extension.hpp
aff3ct/include/Module/Channel/AWGN/: Channel_AWGN_asymmetric.hpp
aff3ct/include/Module/Channel/Test/: Channel_Test.cpp  Channel_Test.hpp
aff3ct/include/Module/Modem/FLASH/: Modem_FLASH.hpp  Modem_FLASH.hxx
aff3ct/include/Module/Modem/flash/: Modem_flash.hpp  Modem_flash.hxx
aff3ct/include/Module/Modem/flash_page/: Modem_flash_page.hpp  Modem_flash_page.hxx
aff3ct/include/Tools/Algo/Draw_generator/Random_sigma_generator/: Random_sigma_generator.hpp
aff3ct/include/Tools/Constellation/Flash/: Constellation_flash.hpp  Constellation_flash.hxx
aff3ct/include/Tools/Flash/Cell/: Flash_cell.hpp  Flash_cell.hxx
aff3ct/include/Tools/Flash/Reader/: Flash_reader.hpp  Flash_reader.hxx
aff3ct/include/Tools/Noise/: Sigma_asymmetric.hpp
aff3ct/include/Tools/Thresholder/: Thresholder.hpp  Thresholder.hxx
aff3ct/include/Tools/Thresholder/Soft/: Thresholder_soft.hpp  Thresholder_soft.hxx
aff3ct/include/Tools/Thresholder/Static/: Thresholder_static.hpp
aff3ct/src/: CMakeLists.txt  main.cpp
aff3ct/src/Module/: Channel_Test.cpp
aff3ct/src/Module/Channel/AWGN/: Channel_AWGN_asymmetric.cpp
aff3ct/src/Module/Channel/Test/: Channel_Test.cpp
aff3ct/src/Module/Modem/Modem_FLASH/: Modem_FLASH.cpp
aff3ct/src/Tools/Algo/Draw_generator/Random_sigma_generator/: Random_sigma_generator.cpp
aff3ct/src/Tools/Flash/Cell/: Flash_cell.cpp
aff3ct/src/Tools/Flash/Reader/: Flash_reader.cpp
aff3ct/src/Tools/Noise/: Sigma_asymmetric.cpp
aff3ct/tests/: main.cpp
aff3ct/tests/unit_tests/: Channel_AWGN_asymmetric_test.cpp  Channel_AWGN_test_test.cpp  Constellation_flash_test.cpp  Flash_cell_reader.cpp  Flash_cell_reader_test.cpp  Flash_cell_test.cpp  Flash_reader_test.cpp  Modem_flash_page_test.cpp  Modem_flash_test.cpp  Random_sigma_generator_test.cpp  Sigma_asymmetric_test.cpp  Thresholder_soft_test.cpp
aff3ct_alpha/src/: main.py  optimal_thresholds.py
python-files/: .gitignore  QC_tanner_graph.py  README.md  Thresholds.csv  analyze_randomness.py  analyze_thresholds.py  config.py  config.yml  generate_H.py  invert_graph.py  modem_generic_demodulate.py  optimal_thresholds.py  qc-pega.py  qc_graph_tools.py  qc_graph_tools_test.py  requirements.txt  simple_flash_model.py
python-files/Analysis/: plot_rber_curve.py  utils.py
python-files/Channel/: Single_soft_capacity.csv  analyze_randomness.py  full_flash_model.py  theoretical_noise_calcs.py
python-files/Codec/: 1_edge_regular.qc  G.qc  Graph_algorithms.py  Graph_algorithms_test.py  MM_QC_PEGA.py  Tanner_graph.py  Test.qc  qc_graph_tools_test.py  test.txt
python-files/Codec/DE/: config_cluster.py  config_cluster.yml  de_methods.py  de_symmetric.py  density_evolution.py  density_evolution_comparison.py  differential_evolution.py  differential_evolution_cluster.py  discrete_ge.py  discretize_sigma.py  evolution_algorithm.py  generate_distributions.py  old_degree_calcs.py  population.npy  sampled_de.py  symmetric_de.py  test_ge.npz  validation_bec.py  validation_sample.py
python-files/Codec/MM-QC-PEGA/: MM_QC_PEGA.py  invert.py
python-files/Codec/density_evolution/: de_bec.py  density_evolution_symmetric.py  differential_evolution.py  stoch_var.py  try2.py
python-files/Modem/: Single_soft_capacity.csv  analyze_thresholds.py  generate_gray.py  optimal_thresholds.py
python-files/analysis/: analyze_de.py  analyze_randomness.py  compute_shannon.py  girths.py  input_parameters.py  rber_to_ber.py
python-files/analysis/aff3ct_simulations/results/: config.yml  plotter.py  plotter_utils.py  rber_to_ber.py
python-files/analysis/aff3ct_simulations/simulation/: input_parameters.py
python-files/analysis/article_figures/: article_figures.py
python-files/analysis/density_evolution/: analyze_de.py
python-files/analysis/qc_ldpc/: random_qc_ldpc_matrix.py
python-files/analysis/qc_ldpc/data/: optimal_03skew_hard.qc  optimal_045skew_hard.qc  optimal_hard.qc  optimal_soft.qc  random.qc
python-files/compute_dmc/: 3_05_AWGN_test.csv  README.md  compute_dmc.py  compute_shannon.py  compute_shannon_v2.py  config.yml  dmc_utils.py  figures.py
python-files/compute_dmc/data/: 2_03_AWGN.csv  2_04_AWGN.csv  2_05_AWGN.csv  4_05_AWGN.csv
python-files/density_evolution/: .gitignore  README.md  config.yml  convolution.py  de_analysis.py  de_bec.py  de_symmetric.py  de_tools.py  de_utils.py  density_evolution.py  density_evolution_symmetric.py  discretize_sigma.py  ga_continuous.py  ga_continuous_parallel.py  ga_discrete.py  ga_discrete_parallel.py  test.py
python-files/density_evolution/data/: Run1.npz
python-files/density_evolution/log/: log.txt
python-files/mm_qc_pega/: aff3ct_test.qc  config.yml  continous_test0.qc  figur-graphs.py  graphs.py  invert_testing.qc  mm_qc_pega.py  peg_utils.py  test.qc
python-files/modulation/: generate_gray.py
python-files/params_data/: Run1_de_params.csv
python-files/plots/: article_figures.py
python-files/qc-ldpc/: qc-pega.py  qc_graph_tools.py
python-files/qc_ldpc/: linear_independent_columns.py  qc-pega.py  qc_graph_tools.py
